fix(css): .light.high-contrast file icon color fix
the color did not match github's

fix #228

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -101,7 +101,7 @@
     --color-success-fg: #055d20;
     --color-done-fg: #622cbc;
     --color-icon-directory: #368cf9;
-    --color-icon-file: #368cf9;
+    --color-icon-file: #0e1116;
     --color-btn-bg: #e7ecf0;
     --color-btn-border: rgba(1, 4, 9, 0.8);
     --color-btn-hover-bg: #ced5dc;
